--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Hours of TV Watched Each Month</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="test.js"></script>
+  <script src="static/test.js"></script>
 </body>
 </html>
