--- a/Graphs/style.css
+++ b/Graphs/style.css
@@ -1,13 +1,13 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 1;
 }
 
 .bar {
-  fill: orange;
+  fill: red;
 }
 
 .bar:hover {
-  fill: green;
+  fill: pink;
 }
